RESOLVED FIXED149824
Reference cycles during SVG dependency invalidation
https://bugs.webkit.org/show_bug.cgi?id=149824
Summary Reference cycles during SVG dependency invalidation
Dean Jackson
Reported 2015-10-05 16:31:19 PDT
Reference cycles during SVG dependency invalidation
Attachments
Patch (4.46 KB, patch)
2015-10-05 16:36 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2015-10-05 16:32:25 PDT
Dean Jackson
Comment 2 2015-10-05 16:36:55 PDT
Dean Jackson
Comment 3 2015-10-05 16:44:16 PDT
Note You need to log in before you can comment on or make changes to this bug.