Source/WebCore/rendering/svg/RenderSVGResource.cpp
@@ -172,9 +172,20 @@ static inline void removeFromCacheAndInvalidateDependencies(RenderElement& rende
     HashSet<SVGElement*>* dependencies = renderer.document().accessSVGExtensions().setOfElementsReferencingTarget(downcast<SVGElement>(renderer.element()));
     if (!dependencies)
         return;
+
+    // We allow cycles in SVGDocumentExtensions reference sets in order to avoid expensive
+    // reference graph adjustments on changes, so we need to break possible cycles here.
+    static NeverDestroyed<HashSet<SVGElement*>> invalidatingDependencies;
+
     for (auto* element : *dependencies) {
-        if (auto* renderer = element->renderer())
+        if (auto* renderer = element->renderer()) {
+            if (UNLIKELY(!invalidatingDependencies.get().add(element).isNewEntry)) {
+                // Reference cycle: we are in process of invalidating this dependant.
+                continue;
+            }
             RenderSVGResource::markForLayoutAndParentResourceInvalidation(*renderer, needsLayout);
+            invalidatingDependencies.get().remove(element);
+        }
     }
 }
 
